# cabal-file

./: .stack-all  .travis.yml  ChangeLog.md  LICENSE  Main.hs  Makefile  README.md  TODO  cabal-file.cabal  stack-lts12.yaml  stack-lts13.yaml  stack.yaml
app/: Cmds.hs  Depends.hs  Main.hs
src/: Cmds.hs  Depends.hs  Diff.hs  Index.hs  Main.hs
src/Hackage/: Index.hs
