name:                cabal-file
version:             0.1.0
synopsis:            Cabal file access
-- description:
license:             BSD3
license-file:        LICENSE
author:              Jens Petersen
maintainer:          juhpetersen@gmail.com
copyright:           2019-2020  Jens Petersen
category:            Distribution
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable cbl-file
  main-is:             Main.hs
  other-modules:       Cmds
                       Depends
                       Hackage.Index
  hs-source-dirs:      src
  build-depends:       base < 5,
                       bytestring,
                       Cabal > 2.2,
                       directory,
                       extra,
                       filepath,
                       hackage-security,
                       optparse-applicative,
                       simple-cabal > 0.1,
                       simple-cmd,
                       simple-cmd-args >= 0.1.2,
                       time
  default-language:    Haskell2010
  ghc-options:         -Wall
